
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct SN_env {int dummy; } ;


 int eq_s_b (struct SN_env*,int,int ) ;
 int s_3 ;

__attribute__((used)) static int r_mark_ki(struct SN_env * z) {
    if (!(eq_s_b(z, 2, s_3))) return 0;
    return 1;
}
